--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootcamp Project 1</title>
+    <title>Bootcamp Project 2</title>
     <link rel="stylesheet" href="./style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Poppins:400,600&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/01bfd4ad63.js" crossorigin="anonymous"></script>
@@ -21,14 +21,15 @@
                         <li><a href="#reserve">RESERVE</a></li>
                     </ul>
                     <div class="nav-logo">
-                        <img src="" alt="">
+                        <h1>Sunshine</h1>
                     </div>
                     <ul>
                         <li><a href="#blog">BLOG</a></li>
                         <li><a href="#contact">CONTACT</a></li>
-                        <li></li>
-                        <li></li>
-                    </ul>                    
+                        <li><i class="fas fa-search"></i></li>
+                        <li><i class="fas fa-shopping-cart"></i></li>
+                        <p class="two">2</p>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -38,8 +39,12 @@
     </header>
 
     <section class="about-us">
+        <h3>A LITTLE ABOUT US</h3>
         <div class="about-image">
             <img src="./assets/home-2.jpeg" alt="Girl in bathing suit laying on white sandy beach">
+        </div>
+        <div class="about-circle">
+            <img src="./assets/home-circle-text.png" alt="">
         </div>
         <div class="about-info">
             <h2>A great place to enjoy your life<h2>
@@ -51,27 +56,28 @@
     <section class="experience">
         <ul>
             <li>
-                <h2>SUNNY SEASON</h2>
+                
+                <h2><i class="fas fa-sun"></i> SUNNY SEASON</h2>
                 <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme. Modern Travel adventure whimsical, webdesign organized pretty cute website colorful modern adventure.</p>
             </li>
             <li>
-                <h2>FIVE STAR RESTAURANTS</h2>
+                <h2><i class="fas fa-utensils"></i> FIVE STAR RESTAURANTS</h2>
                 <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme. Modern Travel adventure whimsical, webdesign organized pretty cute website colorful modern adventure.</p>
             </li>
             <li>
-                <h2>FLIGHT INCLUDED</h2>
+                <h2><i class="fas fa-plane"></i> FLIGHT INCLUDED</h2>
                 <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme. Modern Travel adventure whimsical, webdesign organized pretty cute website colorful modern adventure.</p>
             </li>
             <li>
-                <h2>ALL INCLUSIVE</h2>
+                <h2><i class="fas fa-glass-martini"></i> ALL INCLUSIVE</h2>
                 <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme. Modern Travel adventure whimsical, webdesign organized pretty cute website colorful modern adventure.</p>
             </li>
             <li>
-                <h2>GUIDED NATURE EXPEDITIONS</h2>
+                <h2><i class="fas fa-leaf"></i> GUIDED NATURE EXPEDITIONS</h2>
                 <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme. Modern Travel adventure whimsical, webdesign organized pretty cute website colorful modern adventure.</p>
             </li>
             <li>
-                <h2>WAKE UP SERVICES</h2>
+                <h2><i class="fas fa-bell"></i> WAKE UP SERVICES</h2>
                 <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme. Modern Travel adventure whimsical, webdesign organized pretty cute website colorful modern adventure.</p>
             </li>
         </ul>
@@ -84,6 +90,13 @@
         <p></p>
         <h2></h2>
         <div class="stars">
+            <ul>
+                <li><i class="far fa-star"></i></li>
+                <li><i class="far fa-star"></i></li>
+                <li><i class="far fa-star"></i></li>
+                <li><i class="far fa-star"></i></li>
+                <li><i class="far fa-star"></i></li>
+            </ul>
 
         </div>
         <p><span>Adam Levine</span> - review from <span>TripAdvisor</span></p>
