--- a/index.html
+++ b/index.html
@@ -12,25 +12,27 @@
 
 <body>
     <nav>
-        <div class="wrapper">
-            <div class="nav-main">
-                <div class="nav-bar">
-                    <ul>
-                        <li><a href="#home">HOME</a></li>
-                        <li><a href="#about">ABOUT</a></li>
-                        <li><a href="#reserve">RESERVE</a></li>
-                    </ul>
-                    <div class="nav-logo">
-                        <h1>Sunshine</h1>
-                    </div>
-                    <ul>
-                        <li><a href="#blog">BLOG</a></li>
-                        <li><a href="#contact">CONTACT</a></li>
-                        <li><i class="fas fa-search"></i></li>
-                        <li><i class="fas fa-shopping-cart"></i></li>
-                        <p class="two">2</p>
-                    </ul>
+        <div class="wrapper-inner">
+            <div class="nav-bar">
+                <ul class="nav-bar-one">
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#reserve">RESERVE</a></li>
+                </ul>
+                <div class="nav-logo">
+                    <h1>Sunshine</h1>
                 </div>
+                <ul class="nav-bar-two">
+                    <li><a href="#blog">BLOG</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
+                    <li><i class="fas fa-search"></i></li>
+                    <li class="cart">
+                        <i class="fas fa-shopping-cart"></i>
+                        <div class="circle-test">
+                            <p class="two">2</p>                    
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -38,93 +40,107 @@
     <header class="background">
     </header>
 
-    <section class="about-us">
-        <h3>A LITTLE ABOUT US</h3>
-        <div class="about-image">
-            <img src="./assets/home-2.jpeg" alt="Girl in bathing suit laying on white sandy beach">
-        </div>
-        <div class="about-circle">
-            <img src="./assets/home-circle-text.png" alt="">
-        </div>
-        <div class="about-info">
-            <h2>A great place to enjoy your life<h2>
-            <p>Expedition colorful design theme fun pretty fun WordPress. Wanderlust WordPress excursion modern webdesign wanderlust excursion traveler. Traveler Travel whimsical, organized design clean expedition whimsical traveler webdesign theme colorful. Adventure blogger Travel modern excursion, design blogger expedition traveler organized blogger. Organized excursion darn simple modern cute colorful.</p>
-            <p><span>Ethan Hunt</span> - Director at Monalisa</p>
+    <section class="">
+        <div class="wrapper-inner about-us">
+            <h3>A LITTLE ABOUT US</h3>
+            <div class="about-us-content">
+                <div class="about-image">
+                    <img src="./assets/home-2.jpeg" alt="Girl in bathing suit laying on white sandy beach">
+                    <div class="about-circle">
+                        <img src="./assets/home-circle-text.png" alt="">
+                    </div>
+                </div>
+                <div class="about-info">
+                    <div class="line"></div>
+                    <h2>A great place to enjoy your life<h3>
+                    <p>Expedition colorful design theme fun pretty fun WordPress. Wanderlust WordPress excursion modern webdesign wanderlust excursion traveler. Traveler Travel whimsical, organized design clean expedition whimsical traveler webdesign theme colorful. Adventure blogger Travel modern excursion, design blogger expedition traveler organized blogger. Organized excursion darn simple modern cute colorful.</p>
+                    <p><span>Ethan Hunt</span> - Director at Monalisa</p>
+                </div>
+            </div>
         </div>
     </section>
 
-    <section class="experience">
-        <ul>
-            <li>
-                
-                <h2><i class="fas fa-sun"></i> SUNNY SEASON</h2>
-                <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme. Modern Travel adventure whimsical, webdesign organized pretty cute website colorful modern adventure.</p>
-            </li>
-            <li>
-                <h2><i class="fas fa-utensils"></i> FIVE STAR RESTAURANTS</h2>
-                <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme. Modern Travel adventure whimsical, webdesign organized pretty cute website colorful modern adventure.</p>
-            </li>
-            <li>
-                <h2><i class="fas fa-plane"></i> FLIGHT INCLUDED</h2>
-                <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme. Modern Travel adventure whimsical, webdesign organized pretty cute website colorful modern adventure.</p>
-            </li>
-            <li>
-                <h2><i class="fas fa-glass-martini"></i> ALL INCLUSIVE</h2>
-                <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme. Modern Travel adventure whimsical, webdesign organized pretty cute website colorful modern adventure.</p>
-            </li>
-            <li>
-                <h2><i class="fas fa-leaf"></i> GUIDED NATURE EXPEDITIONS</h2>
-                <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme. Modern Travel adventure whimsical, webdesign organized pretty cute website colorful modern adventure.</p>
-            </li>
-            <li>
-                <h2><i class="fas fa-bell"></i> WAKE UP SERVICES</h2>
-                <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme. Modern Travel adventure whimsical, webdesign organized pretty cute website colorful modern adventure.</p>
-            </li>
-        </ul>
+    <section class="amenities">
+        <div class="wrapper-inner experience">
+            <ul>
+                <li>                
+                    <div class="test" ><i class="fas fa-sun"></i></div>
+                    <div class="test1">
+                        <h3>SUNNY SEASON</h3>
+                        <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme.</p>
+                    </div>
+                </li>
+                <li>
+                    <h3><i class="fas fa-utensils"></i> FIVE STAR RESTAURANTS</h3>
+                    <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme.</p>
+                </li>
+                <li>
+                    <h3><i class="fas fa-plane"></i> FLIGHT INCLUDED</h3>
+                    <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme.</p>
+                </li>
+                <li>
+                    <h3><i class="fas fa-glass-martini"></i> ALL INCLUSIVE</h3>
+                    <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme.</p>
+                </li>
+                <li>
+                    <h3><i class="fas fa-leaf"></i> GUIDED NATURE EXPEDITIONS</h3>
+                    <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme.</p>
+                </li>
+                <li>
+                    <h3><i class="fas fa-bell"></i> WAKE UP SERVICES</h3>
+                    <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme.</p>
+                </li>
+            </ul>
+        </div>
         <div class="experience-image">
             <img src="./assets/home-3.jpeg" alt="Picture of moutains ocean side with blue water">
         </div>
     </section>
 
     <section class="testimonial">
-        <p></p>
-        <h2></h2>
-        <div class="stars">
-            <ul>
-                <li><i class="far fa-star"></i></li>
-                <li><i class="far fa-star"></i></li>
-                <li><i class="far fa-star"></i></li>
-                <li><i class="far fa-star"></i></li>
-                <li><i class="far fa-star"></i></li>
-            </ul>
-
+        <div class="wrapper-inner">
+            <h3>TESTIMONIAL</h3>
+            <h2>What clients say</h2>
+            <div class="stars">
+                <ul>
+                    <li><i class="far fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                </ul>    
+            </div>
+            <p><span>Adam Levine</span> - review from <span>TripAdvisor</span></p>
         </div>
-        <p><span>Adam Levine</span> - review from <span>TripAdvisor</span></p>
     </section>
 
     <section class="gallery">
-        <p>EXPLORE</p>
-        <h2>Gallery</h2>
-        <ul>
-            <li><img src="./assets/home-4.jpeg" alt="">Image of tropical leaves</li>
-            <li><img src="./assets/home-5.jpeg" alt="">Image of woman floating on her back in the ocean</li>
-            <li><img src="./assets/home-6.jpeg" alt="">Image of a ocean wave breaking</li>
-            <li><img src="./assets/home-7.jpeg" alt="">Image of resort chairs on a dock</li>
-            <li><img src="./assets/home-8.jpeg" alt="">Image of an open suitcase with travel related clothing and gear</li>
-            <li><img src="./assets/home-9.jpeg" alt="">Image of someone looking at a tropical waterfall</li>
-        </ul>
+        <div class="wrapper-inner">
+            <h3>EXPLORE</h3>
+            <h2>Gallery</h2>
+            <ul>
+                <li><img src="./assets/home-4.jpeg" alt="">Image of tropical leaves</li>
+                <li><img src="./assets/home-5.jpeg" alt="">Image of woman floating on her back in the ocean</li>
+                <li><img src="./assets/home-6.jpeg" alt="">Image of a ocean wave breaking</li>
+                <li><img src="./assets/home-7.jpeg" alt="">Image of resort chairs on a dock</li>
+                <li><img src="./assets/home-8.jpeg" alt="">Image of an open suitcase with travel related clothing and gear</li>
+                <li><img src="./assets/home-9.jpeg" alt="">Image of someone looking at a tropical waterfall</li>
+            </ul>
+        </div>
     </section>
 
     <section class="contact">
-        <img src="./assets/home-10.jpeg" alt="Image of a small bay with people partaking in water activities.">
-        <div class="contact-info">
-            <p>INFORMATION</p>
-            <h2>Contact us</h2>
-            <h3><span class="city">Honolulu,</span> <span class="country">Hawaii</span></h3>
-            <p>123 King Str, 4th Floor, Utral House Building. <br>Honolulu, Hawaii</p>
-            <p><span>Email:</span> info@sunshineohotel.com</p>
-            <p>Call directly</p>
-            <h3 class="phone-number">+99 (0) 344 956 4050</h3>
+        <div class="wrapper-outer">
+            <img src="./assets/home-10.jpeg" alt="Image of a small bay with people partaking in water activities.">
+            <div class="contact-info">
+                <h3>INFORMATION</h3>
+                <h2>Contact us</h2>
+                <h3><span class="city">Honolulu,</span> <span class="country">Hawaii</span></h3>
+                <p>123 King Str, 4th Floor, Utral House Building. <br>Honolulu, Hawaii</p>
+                <p><span>Email:</span> info@sunshineohotel.com</p>
+                <p>Call directly</p>
+                <h3 class="phone-number">+99 (0) 344 956 4050</h3>
+            </div>
         </div>
     </section>
 
