--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootcamp Project 2</title>
     <link rel="stylesheet" href="./styles/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Poppins:400,600&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700|Poppins:400,600&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/01bfd4ad63.js" crossorigin="anonymous"></script>
 </head>
 
@@ -45,7 +45,7 @@
             <h3>A LITTLE ABOUT US</h3>
             <div class="about-us-content">
                 <div class="about-image">
-                    <img src="./assets/home-2.jpeg" alt="Girl in bathing suit laying on white sandy beach">
+                    <img class="circle" src="./assets/home-2.jpeg" alt="Girl in bathing suit laying on white sandy beach">
                     <div class="about-circle">
                         <img src="./assets/home-circle-text.png" alt="">
                     </div>
@@ -112,20 +112,25 @@
         </div>
     </section>
 
-    <section class="testimonialGallery wrapper-outer">
+    <section class="testimonial-gallery wrapper-outer">
         <div class="testimonial wrapper-inner">
-            <h3>TESTIMONIAL</h3>
-            <h2>What clients say</h2>
-            <div class="stars">
-                <ul>
-                    <li><i class="far fa-star"></i></li>
-                    <li><i class="far fa-star"></i></li>
-                    <li><i class="far fa-star"></i></li>
-                    <li><i class="far fa-star"></i></li>
-                    <li><i class="far fa-star"></i></li>
-                </ul>    
+            <div class="test-inner-wrapper">
+                <h3>TESTIMONIAL</h3>
+                <h2>What Clients Say</h2>
+                <blockquote>
+                    <p>" Fun adventure colorful traveling Travel traveler fun, traveling cute expidetion simple traveling. Organized traveler colorful whimsical simple, design clean design expedition trevelblogger. Simple whimsical expedition design organized."</p>
+                </blockquote>
+                <div class="stars">
+                    <ul>
+                        <li><i class="far fa-star"></i></li>
+                        <li><i class="far fa-star"></i></li>
+                        <li><i class="far fa-star"></i></li>
+                        <li><i class="far fa-star"></i></li>
+                        <li><i class="far fa-star"></i></li>
+                    </ul>    
+                </div>
+                <p><span>Adam Levine</span> - review from <span>TripAdvisor</span></p>
             </div>
-            <p><span>Adam Levine</span> - review from <span>TripAdvisor</span></p>
         </div>
 
         <div class=" gallery wrapper-inner">
@@ -134,10 +139,10 @@
             <ul>
                 <li><img src="./assets/home-4.jpeg" alt="Image of tropical leaves"></li>
                 <li><img src="./assets/home-5.jpeg" alt="Image of woman floating on her back in the ocean"></li>
-                <li><img src="./assets/home-6.jpeg" alt="">Image of a ocean wave breaking</li>
-                <li><img src="./assets/home-7.jpeg" alt="">Image of resort chairs on a dock</li>
-                <li><img src="./assets/home-8.jpeg" alt="">Image of an open suitcase with travel related clothing and gear</li>
-                <li><img src="./assets/home-9.jpeg" alt="">Image of someone looking at a tropical waterfall</li>
+                <li><img src="./assets/home-6.jpeg" alt="Image of a ocean wave breaking"></li>
+                <li><img src="./assets/home-7.jpeg" alt=">Image of resort chairs on a dock"</li>
+                <li><img src="./assets/home-8.jpeg" alt="Image of an open suitcase with travel related clothing and gear"></li>
+                <li><img src="./assets/home-9.jpeg" alt="Image of someone looking at a tropical waterfall"></li>
             </ul>
         </div>
     </section>
@@ -145,41 +150,45 @@
     <section class="contact">
         <div class="wrapper-outer">
             <img src="./assets/home-10.jpeg" alt="Image of a small bay with people partaking in water activities.">
-            <div class="contact-info">
-                <h3>INFORMATION</h3>
-                <h2>Contact us</h2>
-                <h3><span class="city">Honolulu,</span> <span class="country">Hawaii</span></h3>
-                <p>123 King Str, 4th Floor, Utral House Building. <br>Honolulu, Hawaii</p>
-                <p><span>Email:</span> info@sunshineohotel.com</p>
-                <p>Call directly</p>
-                <h3 class="phone-number">+99 (0) 344 956 4050</h3>
+            <div class="contact-info wrapper-inner">
+                <div class="inner-contact">
+                    <h3>INFORMATION</h3>
+                    <h2>Contact us</h2>
+                    <h3><span class="city">Honolulu,</span> <span class="country">Hawaii</span></h3>
+                    <p>123 King Str, 4th Floor, Utral House Building. <br>Honolulu, Hawaii</p>
+                    <p><span>Email:</span> info@sunshineohotel.com</p>
+                    <p>Call directly</p>
+                    <h3 class="phone-number">+99 (0) 344 956 4050</h3>
+                </div>
             </div>
         </div>
     </section>
 
-    <footer class="wrapper-outer" id="contact">
+    <footer class="wrapper-outer">
         <div class="wrapper-inner">
-            <ul>
-                <li><a href="#home">Site Map</a></li>
-                <li><a href="#about">Terms & Conditions</a></li>
-                <li><a href="#reserve">Privacy Policy</a></li>
-                <li><a href="#reserve">Help</a></li>
-                <li><a href="#reserve">Afilliate</a></li>
-            </ul>
-            <ul>
-                <li><a href="#home">FAQs</a></li>
-                <li><a href="#about">Blog</a></li>
-                <li><a href="#reserve">Location</a></li>
-                <li><a href="#reserve">Press</a></li>
-            </ul>
-    
-            <form>
-                <p>Subscribe to our newsletter to stay updated.</p>
-                <div class="containerMail">
-                    <input type="text" placeholder="email address" name="mail" required>
-                    <input type="submit" value="SUBSCRIBE">
-                </div>
-            </form>
+            <div class="footer-border">
+                <ul>
+                    <li><a href="#home">Site Map</a></li>
+                    <li><a href="#about">Terms & Conditions</a></li>
+                    <li><a href="#reserve">Privacy Policy</a></li>
+                    <li><a href="#reserve">Help</a></li>
+                    <li><a href="#reserve">Afilliate</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#home">FAQs</a></li>
+                    <li><a href="#about">Blog</a></li>
+                    <li><a href="#reserve">Location</a></li>
+                    <li><a href="#reserve">Press</a></li>
+                </ul>
+        
+                <form>
+                    <p>Sign up to get our newsletter</p>
+                    <div class="containerMail">
+                        <input type="text" placeholder="email address" name="mail" required>
+                        <input type="submit" value="SUBSCRIBE">
+                    </div>
+                </form>
+            </div>
             <div class="copyright">
                 <p>Copyright &copy 2019 HackerYou</p>
             </div>
