completed more sass, more work done on blog

--- a/blog.html
+++ b/blog.html
@@ -40,13 +40,14 @@
 
     <section>
         <div class="wrapper-inner blog-shift">
+            <div class="width-limiter">
             <div class="blog-title">
                 <h2>Sunshine Hotel in top 5 best hotel from TripAdvisor magazine</h2>
                 <p>Home > Blog > Sunshine Hotel in top 5 best hotel from TripAdvisor magazine</p>
             </div>
             <div class="blog-header">
                 <div class="author">
-                    <img src="" alt="">
+                    <img src="./assets/blog-2.jpeg" alt="Photo of the upper half of a woman with her head turned.">
                     <div class="author-name">
                         <h3>Alex Furguson</h3>
                         <p>Admin</p>
@@ -150,7 +151,7 @@
                 </form>
             </div>
 
-
+        </div>
         </div>
     </section>
 
