futher sass work done on media blog page

--- a/blog.html
+++ b/blog.html
@@ -93,7 +93,7 @@
                 <div class="related-gallery">
                     <ul>
                         <li>
-                            <img src="" alt="">
+                            <img src="./assets/blog-3.jpeg" alt="Water plane parked on the beach.">
                             <div>
                                 <p></p>
                                 <h3></h3>
@@ -101,7 +101,7 @@
                             </div>
                         </li>
                         <li>
-                            <img src="" alt="">
+                            <img src="./assets/blog-4.jpeg" alt="Woman floating in ocean on her back">
                             <div>
                                 <p></p>
                                 <h3></h3>
@@ -109,7 +109,7 @@
                             </div>
                         </li>
                         <li>
-                            <img src="" alt="">
+                            <img src="./assets/blog-5.jpeg" alt="Photo of an inter courtyard of a hote of the balconies of the suites">
                             <div>
                                 <p></p>
                                 <h3></h3>
@@ -123,19 +123,19 @@
             <div class="blog-comments">
                 <h2>02 Comments</h2>
                 <div class="comment-post-one">
-                    <img src="" alt="">
-                    <div class="comment">
+                    <img src="./assets/blog-6.jpeg" alt="">
+                    <div class="comment bubble">
                         <p>Daniel Vandaft - Reply</p>
                         <p>Pretty excursion website pretty fun excursion excursion fun. Colorful traveler theme blogger fun, website blogger design organized travelblogger.</p>
-                        <p>Jul 17, 2015 at 15 hours ago</p>
+                        <p class="comment-date">Jul 17, 2015 at 15 hours ago</p>
                     </div>
                 </div>
                 <div class="comment-post-two">
-                    <img src="" alt="">
-                    <div class="comment">
+                    <img src="./assets/blog-7.jpeg" alt="">
+                    <div class="comment bubble">
                         <p>Jenifer Loopz - Reply</p>
                         <p>Pretty excursion website pretty fun excursion excursion fun. Colorful traveler theme blogger fun, website blogger design organized travelblogger.</p>
-                        <p>Jul 17, 2015 at 15 hours ago</p>
+                        <p class="comment-date">Jul 17, 2015 at 15 hours ago</p>
                     </div>
                 </div> 
                 <h2>Leave A Comment</h2>               
