Blog - added font awesome and styled it a bit

--- a/blog.html
+++ b/blog.html
@@ -81,10 +81,10 @@
             <div class="blog-media">
                 <h3>Share:</h3>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-instagram"></i></li>
+                    <li><i class="fab fa-facebook-f"></i></li>
+                    <li><i class="fab fa-google-plus-g"></i></li>
                 </ul>
             </div>
 
