--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@
             </div>
             <div class="copyright">
                 <p>Copyright &copy 2019 HackerYou</p>
+                <ul>
+                    <li><i class="fab fa-facebook-f"></i></li>
+                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-instagram"></i></li>
+                </ul>
             </div>
         </div>
     </footer>
