finished html and basic styling of contact page. Working on final styling of all pages

--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="./styles/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700|Poppins:400,600&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/01bfd4ad63.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="wrapper-outer">
     <nav>
         <div class="wrapper-inner">
             <div class="nav-bar">
@@ -35,11 +35,67 @@
         </div>
     </nav>
 
-    <header class="background">
+    <header class="contact-background-header">
     </header>
 
 
+    <section class="wrapper-outer">
+        <div class="wrapper-inner">
+            <div class="contact-details">
+                <h2>Contact details</h2>
+                <p>Travel website simple website design darn Travel design webdesign. Travelblogger Travel website whimsical colorful modern blogger.</p>
+            </div>
+            <ul class="contact-list">
+                <li>
+                    <div>
+                        <i class="fas fa-mobile-alt"></i>
+                        <h3>Phone</h3>
+                        <p>Phone 01: (0091) 8547 632521</p>
+                        <p>Phone 01: (084) 965 4788</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="contact-unique1">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <h3>Address</h3>
+                        <p>123 King Str, 4th Floor, Utral Hosue Building, Honolulu, Hawaii</p>
+                    </div>
 
+                </li>
+                <li class="contact-unique2">
+                    <div >
+                        <i class="fas fa-envelope"></i>
+                        <h3>Email</h3>
+                        <p>support@sunshine.com</p>
+                        <p>hello@sunshine.com</p>
+                    </div>
+                </li>
+            </ul>
+            <div class="in-touch">
+                <h2>Get in touch with us</h2>
+                <p>Travel website simple website design darn Travel design webdesign.</p>
+            </div>
+
+            <form class="comment-form">
+                <div class="container-comment">
+                    <div class="comment-list">
+                        <ul>
+                            <li><input type="text" class="form2" placeholder="Enter your name..." name="mail" required></li>
+                            <li><input type="text" class="form2" placeholder="youremail@domain.com" name="mail" required>  </li>
+                            <li><input type="text" class="form2 third-box" placeholder="Subject (Optional)" name="mail" required> </li>
+                        </ul>
+                    </div>            
+                    <textarea name="field" id="field" class="msg-area" placeholder="Here goes your message"></textarea>
+                    <button class="contact-button"><h3>SEND MESSAGE</h3></button>
+                </div>
+            </form>
+        </div>
+    </section>
+
+
+    <section class="secondary-background">
+
+    </section>
 
 
 
@@ -74,9 +130,9 @@
         
                 <form>
                     <p>Sign up to get our newsletter</p>
-                    <div class="containerMail">
-                        <input type="text" placeholder="email address" name="mail" required>
-                        <input type="submit" value="SUBSCRIBE">
+                    <div class="container-mail">
+                        <input type="text" class="footer-form" placeholder="email address" name="mail" required>
+                        <button class="footer-button"><i class="far fa-paper-plane"></i></button>
                     </div>
                 </form>
             </div>
