--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700|Poppins:400,600&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/01bfd4ad63.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="wrapper-outer">
     <nav>
         <div class="wrapper-inner">
             <div class="nav-bar">
