--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/01bfd4ad63.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="wrapper-outer">
     <nav>
         <div class="wrapper-inner">
             <div class="nav-bar">
@@ -23,8 +23,8 @@
                     <h1>Sunshine</h1>
                 </div>
                 <ul class="nav-bar-two">
-                    <li><a href="#blog">BLOG</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="./blog.html">BLOG</a></li>
+                    <li><a href="./contact.html">CONTACT</a></li>
                     <li><i class="fas fa-search"></i></li>
                     <li class="cart">
                         <i class="fas fa-shopping-cart"></i>
@@ -40,7 +40,7 @@
     <header class="background">
     </header>
 
-    <section class="about wrapper-outer">
+    <section class="about wrapper-outer" id="about">
         <div class="wrapper-inner about-us">
             <h3>A LITTLE ABOUT US</h3>
             <div class="about-us-content">
@@ -64,14 +64,14 @@
         <div class="wrapper-inner experience">
             <ul>
                 <li>                
-                    <h3><i class="fas fa-sun"></i></h3>
+                    <h3 class="amenities-image"><i class="fas fa-sun"></i></h3>
                     <div class="amenities-info">
                         <h3>SUNNY SEASON</h3>
                         <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme.</p>
                     </div>
                 </li>
                 <li>
-                    <h3><i class="fas fa-utensils"></i></h3>
+                    <h3 ><i class="fas fa-utensils"></i></h3>
                     <div class="amenites-info">
                         <h3>FIVE STAR RESTAURANTS</h3>
                         <p>Clean design design traveling modern travelblogger cute theme Travel. Website design WordPress webdesign adventure adventure theme.</p>
@@ -129,7 +129,7 @@
                         <li><i class="far fa-star"></i></li>
                     </ul>    
                 </div>
-                <p><span>Adam Levine</span> - review from <span>TripAdvisor</span></p>
+                <p><span class="name">Adam Levine</span> - review from <span>TripAdvisor</span></p>
             </div>
         </div>
 
@@ -154,11 +154,14 @@
                 <div class="inner-contact">
                     <h3>INFORMATION</h3>
                     <h2>Contact us</h2>
-                    <h3><span class="city">Honolulu,</span> <span class="country">Hawaii</span></h3>
-                    <p>123 King Str, 4th Floor, Utral House Building. <br>Honolulu, Hawaii</p>
-                    <p><span>Email:</span> info@sunshineohotel.com</p>
-                    <p>Call directly</p>
-                    <h3 class="phone-number">+99 (0) 344 956 4050</h3>
+                    <h3><span class="city">Honolulu, </span> <span class="country">Hawaii</span></h3>
+                    <p>123 King Str, 4th Floor, Utral Hosue Building. <br>Honolulu, Hawaii</p>
+                    <p><span class="email">Email:</span> info@sunshineohotel.com</p>
+                    <div>
+                        <p>Call directly:</p>
+                        <h2 class="phone-number">+99 (0) 344 956 4050</h2>
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -170,22 +173,22 @@
                 <ul>
                     <li><a href="#home">Site Map</a></li>
                     <li><a href="#about">Terms & Conditions</a></li>
-                    <li><a href="#reserve">Privacy Policy</a></li>
-                    <li><a href="#reserve">Help</a></li>
-                    <li><a href="#reserve">Afilliate</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Afilliate</a></li>
                 </ul>
                 <ul>
                     <li><a href="#home">FAQs</a></li>
-                    <li><a href="#about">Blog</a></li>
-                    <li><a href="#reserve">Location</a></li>
-                    <li><a href="#reserve">Press</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="#">Location</a></li>
+                    <li><a href="#">Press</a></li>
                 </ul>
         
                 <form>
                     <p>Sign up to get our newsletter</p>
-                    <div class="containerMail">
-                        <input type="text" placeholder="email address" name="mail" required>
-                        <input type="submit" value="SUBSCRIBE">
+                    <div class="container-mail">
+                        <input type="text" class="footer-form" placeholder="email address" name="mail" required>
+                        <button class="footer-button"><i class="far fa-paper-plane"></i></button>
                     </div>
                 </form>
             </div>
