another pass for final styling before hover states are added

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
         <div class="wrapper-inner">
             <div class="nav-bar">
                 <ul class="nav-bar-one">
-                    <li><a href="#home">HOME</a></li>
+                    <li><a href="./index.html">HOME</a></li>
                     <li><a href="#about">ABOUT</a></li>
                     <li><a href="#reserve">RESERVE</a></li>
                 </ul>
@@ -21,8 +21,8 @@
                     <h1>Sunshine</h1>
                 </div>
                 <ul class="nav-bar-two">
-                    <li><a href="#blog">BLOG</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="./blog.html">BLOG</a></li>
+                    <li><a href="./contact.html">CONTACT</a></li>
                     <li><i class="fas fa-search"></i></li>
                     <li class="cart">
                         <i class="fas fa-shopping-cart"></i>
@@ -43,7 +43,7 @@
             <div class="width-limiter">
             <div class="blog-title">
                 <h2>Sunshine Hotel in top 5 best hotel from TripAdvisor magazine</h2>
-                <p>Home > Blog > Sunshine Hotel in top 5 best hotel from TripAdvisor magazine</p>
+                <p>Home > Blog > <span>Sunshine Hotel in top 5 best hotel from TripAdvisor magazine</span></p>
             </div>
             <div class="blog-header">
                 <div class="author">
@@ -95,25 +95,25 @@
                         <li>
                             <img src="./assets/blog-3.jpeg" alt="Water plane parked on the beach.">
                             <div>
-                                <p></p>
-                                <h3></h3>
-                                <p></p>
+                                <p>June, 24th, 2016</p>
+                                <h3>Five reasons to stay at the beautiful Sunshine Hotel</h3>
+                                <p>Continue <i class="fas fa-long-arrow-alt-right"></i></p>
                             </div>
                         </li>
                         <li>
                             <img src="./assets/blog-4.jpeg" alt="Woman floating in ocean on her back">
                             <div>
-                                <p></p>
-                                <h3></h3>
-                                <p></p>
+                                <p>April, 24th, 2016</p>
+                                <h3>Experience romantic space just have only at Sunshine hotel</h3>
+                                <p>Continue <i class="fas fa-long-arrow-alt-right"></i></p>
                             </div>
                         </li>
                         <li>
                             <img src="./assets/blog-5.jpeg" alt="Photo of an inter courtyard of a hote of the balconies of the suites">
                             <div>
-                                <p></p>
-                                <h3></h3>
-                                <p></p>
+                                <p>May, 08th, 2016</p>
+                                <h3>Discover activities interested in Sunshine Hotel</h3>
+                                <p>Continue <i class="fas fa-long-arrow-alt-right"></i></p>
                             </div>
                         </li>
                     </ul>
@@ -125,7 +125,7 @@
                 <div class="comment-post-one">
                     <img src="./assets/blog-6.jpeg" alt="">
                     <div class="comment bubble">
-                        <p>Daniel Vandaft - <span>Reply</span></p>
+                        <p><span class="name">Daniel Vandaft</span> - <span class="reply">Reply</span></p>
                         <p>Pretty excursion website pretty fun excursion excursion fun. Colorful traveler theme blogger fun, website blogger design organized travelblogger.</p>
                         <p class="comment-date">Jul 17, 2015 at 15 hours ago</p>
                     </div>
@@ -133,7 +133,7 @@
                 <div class="comment-post-two">
                     <img src="./assets/blog-7.jpeg" alt="">
                     <div class="comment bubble">
-                        <p>Jenifer Loopz - <span>Reply</span></p>
+                        <p><span class="name">Jenifer Loopz</span> - <span class="reply">Reply</span></p>
                         <p>Pretty excursion website pretty fun excursion excursion fun. Colorful traveler theme blogger fun, website blogger design organized travelblogger.</p>
                         <p class="comment-date">Jul 17, 2015 at 15 hours ago</p>
                     </div>
