--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="wrapper-inner">
             <div class="nav-bar">
                 <ul class="nav-bar-one">
-                    <li><a href="#home">HOME</a></li>
+                    <li><a href="./index.html">HOME</a></li>
                     <li><a href="#about">ABOUT</a></li>
                     <li><a href="#reserve">RESERVE</a></li>
                 </ul>
@@ -160,7 +160,6 @@
                     <div>
                         <p>Call directly:</p>
                         <h2 class="phone-number">+99 (0) 344 956 4050</h2>
-
                     </div>
                 </div>
             </div>
