finished off media queries

--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,9 @@
                         </div>
                     </li>
                 </ul>
+                <div class="mobile-bar">
+                    <i class="fas fa-bars"></i>
+                </div>
             </div>
         </div>
     </nav>
