--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <div class="wrapper-inner">
             <div class="nav-bar">
                 <ul class="nav-bar-one">
-                    <li><a href="#home">HOME</a></li>
+                    <li><a href="./index.html">HOME</a></li>
                     <li><a href="#about">ABOUT</a></li>
                     <li><a href="#reserve">RESERVE</a></li>
                 </ul>
@@ -21,8 +21,8 @@
                     <h1>Sunshine</h1>
                 </div>
                 <ul class="nav-bar-two">
-                    <li><a href="#blog">BLOG</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="./blog.html">BLOG</a></li>
+                    <li><a href="./contact.html">CONTACT</a></li>
                     <li><i class="fas fa-search"></i></li>
                     <li class="cart">
                         <i class="fas fa-shopping-cart"></i>
@@ -31,6 +31,9 @@
                         </div>
                     </li>
                 </ul>
+                <div class="mobile-bar">
+                    <i class="fas fa-bars"></i>
+                </div>
             </div>
         </div>
     </nav>
@@ -66,8 +69,11 @@
                     <div >
                         <i class="fas fa-envelope"></i>
                         <h3>Email</h3>
-                        <p>support@sunshine.com</p>
-                        <p>hello@sunshine.com</p>
+                        <div class="contact-email">
+                            <p>support@sunshine.com</p>
+                            <p>hello@sunshine.com</p>
+
+                        </div>
                     </div>
                 </li>
             </ul>
@@ -96,7 +102,7 @@
     <section class="secondary-background">
 
     </section>
-    
+
     <footer class="wrapper-outer">
         <div class="wrapper-inner">
             <div class="footer-border">
