--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                         </div>
                     </li>
                 </ul>
+                <div class="mobile-bar">
+                    <i class="fas fa-bars"></i>
+                </div>  
             </div>
         </div>
     </nav>
@@ -148,7 +151,6 @@
     </section>
 
     <section class="contact">
-        <div class="wrapper-outer">
             <img src="./assets/home-10.jpeg" alt="Image of a small bay with people partaking in water activities.">
             <div class="contact-info wrapper-inner">
                 <div class="inner-contact">
@@ -163,7 +165,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <footer class="wrapper-outer">
