--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
             </div>
         </div>
     </footer>
+<script src='https://code.jquery.com/jquery-3.4.0.min.js'
+    integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
+    <script src="./konami.js"></script>
 </body>
 
 </html>
